[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-fmp-data"
version = "0.1.1"
description = "An integration package connecting FmpData and LangChain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
authors = []
dependencies = [
    "langchain-core>=1.0.0",
    "fmp-data[langchain]>=2.1.5",
    "langgraph>=1.0.0",
    "langchain-openai>=1.0.0",
    "faiss-cpu>=1.9.0",
    "langchain>=1.0.0",
]

[project.urls]
Repository = "https://github.com/MehdiZare/langchain-fmp-data"
"Source Code" = "https://github.com/MehdiZare/langchain-fmp-data"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "bandit>=1.9.0",
]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
    "pytest-socket>=0.7.0",
    "pytest-watcher>=0.6.0",
    "langchain-tests>=1.0.0",
    "pytest-cov>=7.0.0",
]
codespell = [
    "codespell>=2.4.0",
]

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
